2001-03-08  Per Bothner  <per@bothner.com>

	* ParsedXMLToConsumer.java:  Import gnu.lists instead of gnu.kawa.util.
	* XMLPrinter.java:  Likewise.
	(writeObject):  If Consumable, consume it.
	(write):  Fixes - forgotten what.

2001-02-16  Per Bothner  <per@bothner.com>

	New package.
	* ParsedXMLHandler.java.in:  New to-be-preprocess-Java file.
	* gnu/kawa/xml/XMLParser.java.in:  Likewise.
	* gnu/kawa/xml/ParsedXMLToConsumer.java:  New class.
	* XMLPrinter.java:  New class.  Implements Consumer.
