@@ -2,9 +2,7 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-SUFFIXES = .java .class
-
-javadir=$(datadir)/java/$(subdir)
+include $(top_srcdir)/Make-rules
 
 #  CompileTemplates.java
 
@@ -20,10 +18,9 @@ java_FUTURE = \
   SimpleFilter.java \
   XMLConsumer.java
 
-java_XML_ENABLED=\
+java_sources = \
   XMLPrinter.java \
-  ParsedXMLToConsumer.java \
-  $(java_BUILT)
+  ParsedXMLToConsumer.java
 
 java_BUILT = \
   ParsedXMLHandler.java \
@@ -31,11 +28,11 @@ java_BUILT = \
   XMLParser.java \
   XMLParserByte.java
 
-java_JAVA = $(java_BUILT) $(java_@XML_SELECTED@)
-
 BUILT_SOURCES = $(java_BUILT)
-
-SOURCES = $(java_JAVA) $(java_XML_ENABLED) XMLParser.java.in ParsedXMLHandler.java.in
+java_Java= $(java_BUILT) $(java_sources)
+GCJ_DEPS = $(java_Java)
+EXTRA_DIST = $(java_sources) \
+  XMLParser.java.in ParsedXMLHandler.java.in
 
 FROM_XMLParser = -e '1s|/.*-Java-.*/|// This file is automatically generated from XMLParser.java.in - DO NOT EDIT!|'
 FROM_XMLParserHandler = -e '1s|/.*-Java-.*/|// This file is automatically generated from XMLParserHandler.java.in - DO NOT EDIT!|'
@@ -65,3 +62,9 @@ ParsedXMLHandler.java:  $(srcdir)/ParsedXMLHandler.java.in
 	  <$(srcdir)/ParsedXMLHandler.java.in >ParsedXMLHandler.java 
 
 # CLEANFILES = $(java_BUILT) *.class *.stamp
+
+PACKAGE_FNAME = gnu-kawa-xml
+
+all: Makefile java-classes.stamp $(@GCJ_COMPILED_SELECTED@)
+
+install-data-am: install-java-classes
