@@ -4,7 +4,7 @@ AUTOMAKE_OPTIONS = foreign
 
 include $(top_srcdir)/Make-rules
 
-java_JAVA=\
+java_sources = \
   Array.java \
   CharBuffer.java \
   CharSequence.java \
@@ -33,8 +33,7 @@ java_JAVA=\
   U8Vector.java \
   U16Vector.java \
   U32Vector.java \
-  U64Vector.java \
-  $(java_BUILT)
+  U64Vector.java
 
 java_BUILT = \
   AbstractSequence.java \
@@ -43,7 +42,11 @@ java_BUILT = \
   SimpleVector.java
 
 BUILT_SOURCES = $(java_BUILT)
-SOURCES = $(java_JAVA) Sequence.java.in SeqPosition.java.in
+java_Java= $(java_BUILT) $(java_sources)
+GCJ_DEPS = $(java_Java)
+EXTRA_DIST = $(java_sources) \
+  AbstractSequence.java.in Sequence.java.in \
+  SeqPosition.java.in SimpleVector.java.in
 
 SED_COLLECTIONS_SUBS = $(SED_@JAVA_COLLECTIONS_SELECTED@_SUBS) \
   -e '1i\' -e '// DO NOT EDIT!  -*- buffer-read-only: t -*-'  
@@ -56,8 +59,7 @@ SED_WITHOUT_JAVA_COLLECTIONS_SUBS = \
 
 PACKAGE_FNAME = gnu-lists
 
-COLL = @JAVA_COLLECTIONS_SELECTED@
-all: Makefile classjava.stamp $(@GCJ_COMPILED_SELECTED@)
+all: Makefile java-classes.stamp $(@GCJ_COMPILED_SELECTED@)
   
 Sequence.java:  $(srcdir)/Sequence.java.in
 	sed $(SED_COLLECTIONS_SUBS) \
@@ -78,3 +80,5 @@ SimpleVector.java:  $(srcdir)/SimpleVector.java.in
 	sed $(SED_COLLECTIONS_SUBS) \
 	  -e '1s|//.*-Java-.*|// This file is automatically generated from SimpleVector.java.in.|' \
 	  <$(srcdir)/SimpleVector.java.in >SimpleVector.java
+
+install-data-am: install-java-classes
